--- a/src/test.tex
+++ b/src/test.tex
@@ -1,16 +1,63 @@
 \documentclass{article}
 \usepackage[utf8]{inputenc}
 
-\title{Test}
+\usepackage{amsmath, amssymb, amsfonts, amsthm}
+
+\usepackage{graphicx, float}
+\graphicspath{ {./img/} }
+
+\usepackage[letterpaper, top=3cm, bottom=3cm, left=4cm, right=3cm]{geometry}
+
+\title{Test title}
 \author{Author}
-\date{2020-01-01}
+\date{2025-01-01}
 
 \begin{document}
 
 \maketitle
+\newpage
 
 \begin{abstract}
 	SEXO EN EL OXXO EN EXCESO
+
+	lorem ipsum dolor sit amet consectetur adipiscing elit sed do eiusmod tempor incididunt ut labore et dolore magna aliqua
 \end{abstract}
+\newpage
+
+\section{El sexo del Oxxo}
+	Lorem ipsum dolor sit amet consectetur adipiscing elit sed do eiusmod tempor incididunt ut labore et dolore magna aliqua
+	lorem ipsum dolor sit amet consectetur adipiscing elit sed do eiusmod tempor incididunt ut labore et dolore magna aliqua
+	lorem ipsum dolor sit amet consectetur adipiscing elit sed do eiusmod tempor incididunt ut labore et dolore magna aliqua
+	SEXO EN EL OXXO EN EXCESO
+	lorem ipsum dolor sit amet consectetur adipiscing elit sed do eiusmod tempor incididunt ut labore et dolore magna aliqua
+	lorem ipsum dolor sit amet consectetur adipiscing elit sed do eiusmod tempor incididunt ut labore et dolore magna aliqua
+
+	Lorem ipsum dolor sit amet consectetur adipiscing elit sed do eiusmod tempor incididunt ut labore et dolore magna aliqua
+	lorem ipsum dolor sit amet consectetur adipiscing elit sed do eiusmod tempor incididunt ut labore et dolore magna aliqua
+	lorem ipsum dolor sit amet consectetur adipiscing elit sed do eiusmod tempor incididunt ut labore et dolore magna aliqua
+	SEXO EN EL OXXO EN EXCESO
+	SEXO EN EL OXXO EN EXCESO
+	lorem ipsum dolor sit amet consectetur adipiscing elit sed do eiusmod tempor incididunt ut labore et dolore magna aliqua
+	lorem ipsum dolor sit amet consectetur adipiscing elit sed do eiusmod tempor incididunt ut labore et dolore magna aliqua
+	lorem ipsum dolor sit amet consectetur adipiscing elit sed do eiusmod tempor incididunt ut labore et dolore magna aliqua
+
+	\subsection{El sexo en exceso}	
+		SEXO EN EL OXXO $\Rightarrow$ SEXO EN EXCESO $\sum F = ma$
+		lorem ipsum dolor sit amet consectetur adipiscing elit sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+		Lorem ipsum dolor sit amet consectetur adipiscing elit sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+
+		\begin{equation}
+			y_f = y_o + v_o\Delta t + \frac{1}{2}a\Delta t^2
+		\end{equation}
+
+		\begin{figure}[H]
+            \centering
+            \includegraphics[width=2.5in]{mosca.png}
+            \caption{Moscacaption}
+            \label{fig:Moscalable}
+        \end{figure}
+
+		Lorem ipsum dolor sit amet consectetur adipiscing elit sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+		Lorem ipsum dolor sit amet consectetur adipiscing elit sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
 
 \end{document}
