--- a/src/test/test.tex
+++ b/src/test/test.tex
@@ -7,12 +7,16 @@
 \graphicspath{ {./img/} }
 
 \usepackage[letterpaper, top=3cm, bottom=3cm, left=4cm, right=3cm]{geometry}
+\renewcommand{\baselinestretch}{1.25}
+\setlength{\parindent}{32pt}
+\setlength{\parskip}{1.25em}
 
 \title{Test title}
 \author{Author}
 \date{2025-01-01}
 
 \begin{document}
+%----------------------------------------------------------------------------------------------------------------------------------
 
 \maketitle
 \newpage
@@ -36,6 +40,7 @@
 	lorem ipsum dolor sit amet consectetur adipiscing elit sed do eiusmod tempor incididunt ut labore et dolore magna aliqua
 	lorem ipsum dolor sit amet consectetur adipiscing elit sed do eiusmod tempor incididunt ut labore et dolore magna aliqua
 	SEXO EN EL OXXO EN EXCESO
+	
 	SEXO EN EL OXXO EN EXCESO
 	lorem ipsum dolor sit amet consectetur adipiscing elit sed do eiusmod tempor incididunt ut labore et dolore magna aliqua
 	lorem ipsum dolor sit amet consectetur adipiscing elit sed do eiusmod tempor incididunt ut labore et dolore magna aliqua
@@ -60,4 +65,5 @@
 		Lorem ipsum dolor sit amet consectetur adipiscing elit sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
 		Lorem ipsum dolor sit amet consectetur adipiscing elit sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
 
+%----------------------------------------------------------------------------------------------------------------------------------
 \end{document}
